WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46114
REGRESSION: Two tables repaint tests failing on bots
https://bugs.webkit.org/show_bug.cgi?id=46114
Summary
REGRESSION: Two tables repaint tests failing on bots
Dave Hyatt
Reported
2010-09-20 12:39:10 PDT
This is a regression from setting the new table cell location in layoutRows prior to laying out. In order to fix, I need to apply layout delta the same way block layout does.
Attachments
Patch
(29.94 KB, patch)
2010-09-20 12:41 PDT
,
Dave Hyatt
no flags
Details
Formatted Diff
Diff
Patch
(3.67 KB, patch)
2010-09-20 13:18 PDT
,
Dave Hyatt
bdakin
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Dave Hyatt
Comment 1
2010-09-20 12:41:16 PDT
Created
attachment 68124
[details]
Patch
Dave Hyatt
Comment 2
2010-09-20 13:18:26 PDT
Created
attachment 68128
[details]
Patch
Dave Hyatt
Comment 3
2010-09-20 13:21:52 PDT
Fixed in
r67879
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug