https://bugs.webkit.org/show_bug.cgi?id=46114, two tables repaint tests failing on bots.

Reviewed by Beth Dakin.

Patch layoutRows to apply the layout delta when setting a new cell location prior to laying out the cell.

The layout delta is then removed after layout has happened when the repaint check is done.  This change
makes cell layout match block child layout, and now the cells have the correct new location up front
when laying out (a necessity for pagination).

* rendering/RenderTableSection.cpp:
(WebCore::RenderTableSection::layoutRows):



Canonical link: https://commits.webkit.org/58584@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67879 268f45cc-cd09-0410-ab3c-d52691b4dbfc